plugins {
	id 'java'
	id'application'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.concordia.velocity'
version = '0.0.1-SNAPSHOT'
description = 'VeloCity Backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.google.firebase:firebase-admin:9.2.0'
    implementation 'com.google.cloud:google-cloud-firestore:3.12.0'
    implementation 'com.google.api-client:google-api-client:2.0.0'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named('bootRun') {
	jvmArgs = [
			'--add-opens', 'java.base/java.time=ALL-UNNAMED',
			'--add-opens', 'java.base/java.time.chrono=ALL-UNNAMED',
			'--add-opens', 'java.base/java.lang=ALL-UNNAMED',
			'--add-opens', 'java.base/java.util=ALL-UNNAMED'
	]
}

application {
	mainClass = 'com.concordia.velocity.BackendApplication'
}

test.testLogging {
	showStandardStreams = true
}